force-app/main/default/objects/Apttus_Config2__ConstraintRule__c/Apttus_Config2__ConstraintRule__c.object-meta.xml
<CustomObject>
    <description>Captures information about configuration constraint rule</description>
    <label>Constraint Rule</label>
    <nameField>
        <label>Constraint Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constraint Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>