force-app/main/default/objects/Apttus_Config2__ConstraintRule__c/fields/Apttus_Config2__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represent whether the rule is active. If unchecked rule is not applied during configuration.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>