force-app/main/default/objects/Apttus_Config2__ConstraintRule__c/fields/Apttus_Config2__ConditionAssociation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConditionAssociation__c</fullName>
    <description>Represents condition association using sequence number in AND / OR operator based expression. For example ((1 AND 2) OR (3 AND 4)) when there are four conditions added to the rule.</description>
    <inlineHelpText>For example ((1 AND 2) OR (3 AND 4)) when there are four conditions added to the rule.</inlineHelpText>
    <label>Condition Association</label>
    <type>TextArea</type>
</CustomField>