force-app/main/default/objects/Apttus_Config2__ConstraintRule__c/fields/Apttus_Config2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Description__c</fullName>
    <description>Used for administrative description of the rule.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>