force-app/main/default/objects/Apttus_Config2__ConstraintRule__c/fields/Apttus_Config2__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpirationDate__c</fullName>
    <description>End date when rule will stop triggering. Leave this blank for always effective rule.</description>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>