force-app/main/default/objects/Apttus_Config2__ConstraintRule__c/fields/Apttus_Config2__MatchMinProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchMinProducts__c</fullName>
    <description>Used by the match rule as min limit</description>
    <label>Match Min Products (DEPRECATED</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>