force-app/main/default/objects/Apttus_Config2__ConstraintRule__c/fields/Apttus_Config2__MatchRule__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchRule__c</fullName>
    <label>Match Rule (DEPRECATED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Match Any in Group</fullName>
            </value>
            <value>
                <fullName>Match All in Group</fullName>
            </value>
            <value>
                <fullName>Match Min/Max</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>