force-app/main/default/objects/Apttus_Config2__ConstraintRule__c/fields/Apttus_Config2__UpdateView__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UpdateView__c</fullName>
    <description>Update View button displays Product Constraint View page</description>
    <formula>HYPERLINK(&quot;/apex/Apttus_Config2__ProductConstraintView?ruleId=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Config2__Button_UpdateView&quot;, &quot;Update View&quot;),&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update View</label>
    <type>Text</type>
</CustomField>