force-app/main/default/objects/Apttus_Config2__ConstraintRule__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__Active__c</columns>
    <columns>Apttus_Config2__ConditionAssociation__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>